[gd_scene load_steps=12 format=3 uid="uid://c0lj60gqvnb8t"]

[ext_resource type="Script" path="res://scenes/bee.gd" id="1_koswt"]
[ext_resource type="Texture2D" uid="uid://uyc37o1vk1sh" path="res://sprites/enemies.png" id="2_4peu2"]
[ext_resource type="PackedScene" uid="uid://cfc15rkjn5pt" path="res://components/shadow_component.tscn" id="3_bvchn"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lrcpl"]
size = Vector2(6.75106, 6)

[sub_resource type="AtlasTexture" id="AtlasTexture_vdatc"]
atlas = ExtResource("2_4peu2")
region = Rect2(64, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_deijb"]
atlas = ExtResource("2_4peu2")
region = Rect2(72, 0, 8, 8)

[sub_resource type="AtlasTexture" id="AtlasTexture_tmuqk"]
atlas = ExtResource("2_4peu2")
region = Rect2(80, 0, 8, 8)

[sub_resource type="SpriteFrames" id="SpriteFrames_m0sqs"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vdatc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_deijb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tmuqk")
}],
"loop": true,
"name": &"fly",
"speed": 15.0
}]

[sub_resource type="Animation" id="Animation_uekwf"]
resource_name = "Float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0045408, 0.437874, 1.03787),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, -2), Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_rswky"]
length = 0.001

[sub_resource type="AnimationLibrary" id="AnimationLibrary_uk0xy"]
_data = {
"Float": SubResource("Animation_uekwf"),
"RESET": SubResource("Animation_rswky")
}

[node name="Bee" type="CharacterBody2D"]
position = Vector2(0, -0.89052)
collision_layer = 4
motion_mode = 1
floor_constant_speed = true
script = ExtResource("1_koswt")

[node name="Collider" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("RectangleShape2D_lrcpl")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(0, -0.0160264)
sprite_frames = SubResource("SpriteFrames_m0sqs")
animation = &"fly"
autoplay = "fly"
frame_progress = 0.634721

[node name="Hitbox" type="Area2D" parent="AnimatedSprite2D"]
position = Vector2(0, 1)
collision_layer = 4
collision_mask = 4098

[node name="HitboxShape" type="CollisionShape2D" parent="AnimatedSprite2D/Hitbox"]
scale = Vector2(1.185, 1.04)
shape = SubResource("RectangleShape2D_lrcpl")
debug_color = Color(0.975986, 0, 0.415286, 0.42)

[node name="Walk Timer" type="Timer" parent="."]
wait_time = 2.0

[node name="Walk Cooldown" type="Timer" parent="."]
wait_time = 2.0

[node name="Randomizer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_uk0xy")
}
autoplay = "Float"

[node name="ShadowRay" parent="." instance=ExtResource("3_bvchn")]

[connection signal="area_entered" from="AnimatedSprite2D/Hitbox" to="." method="_on_hitbox_area_entered"]
[connection signal="timeout" from="Walk Timer" to="." method="_on_walk_timer_timeout"]
[connection signal="timeout" from="Walk Cooldown" to="." method="_on_walk_cooldown_timeout"]
[connection signal="timeout" from="Randomizer" to="." method="_on_randomizer_timeout"]
